--- a/HeyThere/android/build.gradle
+++ b/HeyThere/android/build.gradle
@@ -14,6 +14,7 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = "21.4.7075529"
         }
+        RNMapboxMapsImpl = "mapbox"
     }
     repositories {
         google()
@@ -37,6 +38,19 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = project.properties['sk.eyJ1Ijoicm9oaXRtZXJhd2F0IiwiYSI6ImNsZGp3bDFwaTFycTIzb3BpMjBhcTR5dTEifQ.-Iw_C1Qdov4wFHng95nkRw'] ?: ""
+            }
         }
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
