--- a/HeyThere/package.json
+++ b/HeyThere/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@rnmapbox/maps": "rnmapbox/maps#main",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-animatable": "^1.3.3",
