--- a/HeyThere/package.json
+++ b/HeyThere/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^16.7.0",
     "@react-native-firebase/firestore": "^16.7.0",
     "@react-navigation/native": "^6.1.2",
