--- a/HeyThere/package.json
+++ b/HeyThere/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-native-firebase/app": "^16.7.0",
     "@react-native-firebase/firestore": "^16.7.0",
     "@react-navigation/native": "^6.1.2",
