--- a/HeyThere/package.json
+++ b/HeyThere/package.json
@@ -23,8 +23,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
-    "react-native-toasty": "^2.0.0"
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
